<?xml version="1.0" encoding="utf-8"?>
<!-- <NICK NASTA ALEX SILVA/> -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/previousSearchImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="244dp"
        android:clickable="true"
        app:backgroundTint="@color/black_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextSearchImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:backgroundTint="@color/black_overlay"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageView
        android:id="@+id/searchView"
        android:layout_width="353dp"
        android:layout_height="253dp"
        android:contentDescription="@string/fullscreen"
        app:layout_constraintBottom_toTopOf="@+id/searchPplTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSearch"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/startSearch"
        android:layout_width="81dp"
        android:layout_height="45dp"
        android:contentDescription="@string/cancelEdit"
        android:onClick="startSearch"
        android:text="@string/search"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personTag" />

    <TextView
        android:id="@+id/searchPplTags"
        android:layout_width="385dp"
        android:layout_height="40dp"
        android:layout_marginTop="355dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/peopleTextView"
        android:text="@string/peopleTextView"
        app:layout_constraintBottom_toTopOf="@+id/addSearchAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchLocTags"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/locationsTextView"
        android:text="@string/locationsTextView"
        app:layout_constraintBottom_toTopOf="@+id/addSearchAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPplTags"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/locationTag"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_location"
        android:inputType="textPersonName"
        android:windowSoftInputMode="stateAlwaysVisible"
        app:layout_constraintBottom_toTopOf="@+id/startSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/personTag"
        app:layout_constraintTop_toTopOf="@+id/personTag"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/personTag"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/search_person"
        android:inputType="textPersonName"
        android:windowSoftInputMode="stateAlwaysVisible"
        app:layout_constraintBottom_toTopOf="@+id/startSearch"
        app:layout_constraintEnd_toStartOf="@+id/locationTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.Toolbar
        android:id="@+id/photoToolbar"
        android:layout_width="427dp"
        android:layout_height="77dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/searchLocTags"
        app:layout_constraintTop_toBottomOf="@+id/searchLocTags"
        app:layout_constraintVertical_bias="1.0"/>
        <!--tools:layout_editor_relativeX="0dp"
        tools:layout_editor_relativeY="444dp" />-->

    <ImageButton
        android:id="@+id/addSearchAlbum"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/addAlbum"
        android:onClick="addSearchAlbum"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delSearchPhoto"
        app:layout_constraintTop_toBottomOf="@+id/searchPplTags"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/delSearchPhoto"
        android:layout_width="64dp"
        android:layout_height="55dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="54dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/delAlbum"
        android:onClick="delSearchPhoto"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="@+id/photoToolbar"
        app:layout_constraintEnd_toStartOf="@+id/addSearchAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoToolbar"
        app:layout_constraintVertical_bias="0.318"
        app:srcCompat="@android:drawable/ic_menu_delete" />
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="444dp" />

</android.support.constraint.ConstraintLayout>