<?xml version="1.0" encoding="utf-8"?>
<!-- <NICK NASTA ALEX SILVA/> -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotosActivity"
    tools:layout_editor_absoluteY="81dp">


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        app:layout_constraintBottom_toTopOf="@+id/copyPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/photoToolbar"
        android:layout_width="437dp"
        android:layout_height="84dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_relativeX="0dp"
        tools:layout_editor_relativeY="444dp" />
    <!--app:layout_constraintTop_toBottomOf="@+id/saveAlbum"-->


    <ImageButton
        android:id="@+id/copyPhoto"
        android:layout_width="66dp"
        android:layout_height="60dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/movePic"
        android:onClick="getSelection"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addSearchAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView"
        app:srcCompat="@android:drawable/ic_menu_set_as"
        tools:srcCompat="@android:drawable/ic_menu_set_as" />

    <ImageButton
        android:id="@+id/addSearchAlbum"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/addAlbum"
        android:onClick="addPhoto"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="@+id/openPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/copyPhoto"
        app:layout_constraintTop_toTopOf="@+id/openPhoto"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/openPhoto"
        android:layout_width="65dp"
        android:layout_height="59dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/editAlbum"
        android:onClick="openPhoto"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addSearchAlbum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/copyPhoto"
        app:layout_constraintTop_toBottomOf="@+id/delSearchPhoto"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/delSearchPhoto"
        android:layout_width="67dp"
        android:layout_height="58dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/delAlbum"
        android:onClick="delPhoto"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addSearchAlbum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_delete" />


</android.support.constraint.ConstraintLayout>